@@ -1,30 +1,30 @@
 package com.yueshuya.knighttour;
-
 import javafx.animation.AnimationTimer;
 import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.stage.Stage;
-
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Stack;
 
 public class KnightTourApplication extends Application {
-    private Location currentLoc = null;
-    public KnightTourController controller = new KnightTourController(this);
+    private KnightTourController controller = new KnightTourController(this);
     private int[][] board = new int[KnightTourController.NUM_ROWS][KnightTourController.NUM_COLS];
+    private int attemptMove = 0;
+    private boolean mode = true;
+    private Location currentLoc = null;
     private Stack<Location> stack = new Stack<>();
     private HashMap<Location, ArrayList<Location>> exhaustedList = new HashMap<>();
-    private int attemptMove = 0;
     private ArrayList<Location> neighbor = new ArrayList<>();
-    private boolean mode = true;
     // All possible knight moves
     private final int[][] moves = {
             {2, 1}, {2, -1}, {-2, 1}, {-2, -1},
             {1, 2}, {1, -2}, {-1, 2}, {-1, -2}
     };
 
+
+    //Three helper method in dealing with the exhausted list - a map that track all the path that has been attempted
     private void addLoc(Location start, Location end) {
         if (isInMap(start)){
             exhaustedList.get(start).add(end);
@@ -41,12 +41,15 @@ public class KnightTourApplication extends Application {
     private boolean isInMap(Location loc) {
         return exhaustedList.containsKey(loc);
     }
+
+    //returns the sets of reachable positions of a given position
     public ArrayList<Location> findNeighbor(Location location) {
         if (location == null) {
             return null;
         }
         ArrayList<Location> neighbors = new ArrayList<>();
         for (int[] m : moves) {
+            //Rules for how a piece move is treated a 2D array of possible change in tiles add/subtracted from the current position
             Location target = new Location(location.getRow() + m[0], location.getCol() + m[1]);
             if (isValidLoc(target) && notBeenThere(target)) {
                 neighbors.add(target);
@@ -56,6 +59,7 @@ public class KnightTourApplication extends Application {
         setNeighbor(neighbors);
         return neighbors;
     }
+    //Hashmap look up to eliminate path chosen before
     private void removeWrongPath(ArrayList<Location> neighbors, Location currentLoc) {
         if (isInMap(currentLoc)){
            for (Location l : exhaustedList.get(currentLoc)){
@@ -63,6 +67,7 @@ public class KnightTourApplication extends Application {
            }
         }
     }
+    //Valid = in bound of the indexes of the board
     private boolean isValidLoc(Location location) {
         int x = location.getCol();
         int y = location.getRow();
@@ -73,13 +78,13 @@ public class KnightTourApplication extends Application {
     private boolean notBeenThere(Location target) {
         return board[target.getRow()][target.getCol()] == 0;
     }
+    //public method for controller to call - no obvious logic should be exposed
     public void move() {
         if (tourComplete()){
-            return;
+            return; // stops the attempts counter / freeze when the problem is solved
         }
         Location holder = getCurrentLoc();
         Location nextMove = chooseNextMove(neighbor);
-
         if (nextMove == null) {
             backTrack();
         }else{
@@ -87,18 +92,21 @@ public class KnightTourApplication extends Application {
             addLoc(holder, getCurrentLoc());
         }
         attemptMove ++;
-
     }
     private boolean tourComplete() {
         return stack.size() >= (KnightTourController.NUM_ROWS * KnightTourController.NUM_COLS);
     }
+
     private void backTrack() {
         if (!stack.isEmpty()) {
             Location lastLocation = stack.pop();
             board[lastLocation.getRow()][lastLocation.getCol()] = 0;
             if (!stack.isEmpty()) {
                 currentLoc = stack.peek();
-                // Find neighbors again after backtracking - only remove from map if still no move available after backtracking one step
+                // Find neighbors again after backtracking -
+                // only remove from map if still no move available after backtracking one step -
+                // we do this because you will not come back to the same location with same sequence of moves -
+                // otherwise program will just back track all the way to move one and get stuck there
                 findNeighbor(currentLoc);
                 if (neighbor.isEmpty()){
                     removeLoc(currentLoc);
@@ -107,20 +115,22 @@ public class KnightTourApplication extends Application {
             }
         }
     }
-
+// Moves by default selects the first available positions of the Arraylist of neighbors
+// but the mode by default is set to true - that ops for a Warnsdorff approach
     private Location chooseNextMove(ArrayList<Location> neighbor){
         if (neighbor.isEmpty()) {
             return null;
         }
-        Location nextMove = neighbor.get(0);
+        Location nextMove = neighbor.getFirst();
+        //Warnsdorff: select the move with lest accessibility
         if (mode){
             int initA = evalAccessibility(nextMove);
-            for(Location l : neighbor){
+            for(Location l : neighbor){ //basic min algo
                 int test = evalAccessibility(l);
                 if ( test < initA){
                     initA = test;
                     nextMove = l;
-                };
+                }
             }
         }
         return nextMove;
@@ -130,12 +140,11 @@ public class KnightTourApplication extends Application {
         return findNeighbor(l).size();
     }
 
-
     public void setCurrentLoc(Location loc) {
         currentLoc = loc;
         stack.push(loc);
         board[currentLoc.getRow()][currentLoc.getCol()] = stack.size();
-        findNeighbor(currentLoc);
+        findNeighbor(currentLoc); // update the list of neighbors for current position
     }
     public Location getCurrentLoc() {
         return currentLoc;
@@ -156,7 +165,7 @@ public class KnightTourApplication extends Application {
         return neighbor;
     }
 
-    public void setNeighbor(ArrayList<Location> neighbor) {
+    private void setNeighbor(ArrayList<Location> neighbor) {
         this.neighbor = neighbor;
     }
 
